<resources>
    <string name="app_name">AsiaEast</string>
    <string name="select_city">Select City</string>
    <string name="select_country">Select Country</string>
    <string name="title">Start finding travel itineraries in east Asia!</string>
    <string name="how_many_days">How many days do you have in this location?</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="countries">
        <item>South Korea</item>
        <item>Japan</item>
        <item>Taiwan</item>
        <item>Thailand</item>
        <item>Vietnam</item>
        <item>China</item>
    </string-array>
    <string-array name="days">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="korean_cities">
        <item>Seoul</item>
        <item>Busan</item>
        <item>Jeonju</item>
        <item>Sokcho</item>
        <item>Seogwipo</item>
    </string-array>
    <string-array name="japanese_cities">
        <item>Kobe</item>
        <item>Osaka</item>
        <item>Sapporo</item>
        <item>Tokyo</item>
        <item>Fukuoka</item>
        <item>Tottori</item>
        <item>Kumamoto</item>
        <item>Nagasaki</item>
        <item>Kochi</item>
        <item>Matsuyama</item>
        <item>Kyoto</item>
        <item>Iga</item>
        <item>Takamatsu</item>
        <item>Hiroshima</item>
        <item>Okayama</item>
        <item>Tokushima</item>
        <item>Himeji</item>
        <item>Oita</item>
    </string-array>
    <string-array name="taiwanese_cities">
        <item>Taipei</item>
        <item>Jiufen</item>
    </string-array>
    <string-array name="thai_cities">
        <item>Bangkok</item>
        <item>Chiang Mai</item>
    </string-array>
    <string-array name="vietnamese_cities">
        <item>Hanoi</item>
        <item>Ho Chi Minh</item>
        <item>Danang</item>
    </string-array>
    <string-array name="chinese_cities">
        <item>Shanghai</item>
        <item>Shenzhen</item>
        <item>Beijing</item>
    </string-array>
    <string name="gobtn">Go</string>
    <string name="go_to_map">Go to Map</string>
    <string name="edit_pref">Edit Trip Preferences</string>
    <string name="schedule_and_preview">Make Schedule and Preview</string>
    <string name="send_to_email">Send Schedule to Email</string>
    <string name="map_config_activity">MapConfigActivity</string>
    <string name="share">Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

</resources>
