<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navItemMap"
            android:icon="@drawable/ic_map"
            android:title="@string/go_to_map" />
        <item
            android:id="@+id/navItemEditPreferences"
            android:icon="@drawable/ic_edit_inputs"
            android:title="@string/edit_pref" />
        <item
            android:id="@+id/navItemSchedPreview"
            android:icon="@drawable/ic_make_schedule_and_preview"
            android:title="@string/schedule_and_preview" />
    </group>

    <item android:title="@string/share">
        <menu>
            <item
                android:id="@+id/mapItemSendToEmail"
                android:icon="@drawable/ic_send_to_email"
                android:title="@string/send_to_email" />
        </menu>
    </item>
</menu>