<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/choose_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/select_country"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/country_spinner"
        app:layout_constraintEnd_toEndOf="@+id/choose_country"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="@+id/choose_country"
        app:layout_constraintTop_toBottomOf="@+id/choose_country"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/choose_country"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/choose_city"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/select_city"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/city_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_city"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp" />

    <TextView
        android:id="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_spinner"
        android:layout_width="356dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:text="@string/how_many_days"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/day_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/GoButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/daySpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gobtn" />

</androidx.constraintlayout.widget.ConstraintLayout>